force-app/main/default/objects/Case/fields/Account_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Closure_Date__c</fullName>
    <label>Account Closure Date</label>
    <type>Date</type>
</CustomField>