force-app/main/default/objects/Case/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pre-Screening</fullName>
            </value>
            <value>
                <fullName>Application Submitted</fullName>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
            <value>
                <fullName>Home Study</fullName>
            </value>
            <value>
                <fullName>Training In Progess</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Licensed</fullName>
            </value>
            <value>
                <fullName>Pre-Placement Visit</fullName>
            </value>
            <value>
                <fullName>Placement Succeed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>