force-app/main/default/objects/Case/fields/Additional_Information_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Required__c</fullName>
    <description>Additional Information Required - for Onboarding Employee (Record type: HR - Onboarding)</description>
    <label>Additional Information Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>