force-app/main/default/objects/Case/fields/Behavioral_Support_Willingness__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Support_Willingness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Behavioral Support Willingness?</label>
    <type>Checkbox</type>
</CustomField>