force-app/main/default/objects/Case/fields/Business_Justification__c.field-meta.xml
<CustomField>
    <fullName>Business_Justification__c</fullName>
    <label>Business Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>