force-app/main/default/objects/Case/fields/Card_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Request_Type__c</fullName>
    <label>Card Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Request_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Credit Card</fullName>
            </value>
            <value>
                <fullName>Credit Limit Increase</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>New Corporate Card</fullName>
            </value>
            <value>
                <fullName>Update Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>