force-app/main/default/objects/Case/fields/Closure_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Closure_Initiated_By__c</fullName>
    <label>Closure Initiated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>