force-app/main/default/objects/Case/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bullying</fullName>
            </value>
            <value>
                <fullName>Discrimination</fullName>
            </value>
            <value>
                <fullName>Ethics</fullName>
            </value>
            <value>
                <fullName>Harassment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>