force-app/main/default/objects/Case/fields/Confirmed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Start_Date__c</fullName>
    <label>Confirmed Start Date</label>
    <type>Date</type>
</CustomField>