force-app/main/default/objects/Case/fields/Family_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Family_Account_ID__c</fullName>
    <displayFormat>FID-{00000}</displayFormat>
    <label>Family Account ID</label>
    <type>AutoNumber</type>
</CustomField>