force-app/main/default/objects/Case/fields/Hire_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hire_Reason__c</fullName>
    <label>Hire Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Position</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>