force-app/main/default/objects/Case/fields/Home_Setup_Details__c.field-meta.xml
<CustomField>
    <fullName>Home_Setup_Details__c</fullName>
    <label>Home Setup Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>