force-app/main/default/objects/Case/fields/Initial_Statement__c.field-meta.xml
<CustomField>
    <fullName>Initial_Statement__c</fullName>
    <label>Initial Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>