force-app/main/default/objects/Case/fields/Open_to_Emergency_Placements__c.field-meta.xml
<CustomField>
    <fullName>Open_to_Emergency_Placements__c</fullName>
    <label>Open to Emergency Placements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>