force-app/main/default/objects/Case/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>