force-app/main/default/objects/Case/fields/Preferred_Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Age_Range__c</fullName>
    <label>Preferred Age Range</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(0-3): Infants</fullName>
            </value>
            <value>
                <fullName>(4-6): Toddlers</fullName>
            </value>
            <value>
                <fullName>(7-12): Children</fullName>
            </value>
            <value>
                <fullName>(13-17): Teenagers</fullName>
            </value>
            <value>
                <fullName>(18+): Adults</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>