force-app/main/default/objects/Case/fields/Race_Ethnicity_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Race_Ethnicity_Preferences__c</fullName>
    <label>Race/Ethnicity Preferences</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Preference</fullName>
            </value>
            <value>
                <fullName>African American / Black</fullName>
            </value>
            <value>
                <fullName>Hispanic / Latino</fullName>
            </value>
            <value>
                <fullName>White / Caucasian</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>