force-app/main/default/objects/Case/fields/Reason_For_Closure__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Closure__c</fullName>
    <label>Reason For Closure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>