force-app/main/default/objects/Case/fields/Religion_Preference_Flexibility_if_ap__c.field-meta.xml
<CustomField>
    <fullName>Religion_Preference_Flexibility_if_ap__c</fullName>
    <label>Religion Preference / Flexibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Preference</fullName>
            </value>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>Muslim</fullName>
            </value>
            <value>
                <fullName>Hindu</fullName>
            </value>
            <value>
                <fullName>Jewish</fullName>
            </value>
            <value>
                <fullName>Buddhist</fullName>
            </value>
            <value>
                <fullName>Sikh</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>