force-app/main/default/objects/Case/fields/Service_Request_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Category__c</fullName>
    <label>Service Request Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Card</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Expense Reimbursement</fullName>
            </value>
            <value>
                <fullName>File a Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>