force-app/main/default/objects/Case/fields/Support_System_Availability__c.field-meta.xml
<CustomField>
    <fullName>Support_System_Availability__c</fullName>
    <label>Support System Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>