force-app/main/default/objects/Case/fields/Willing_to_Support_Reunification__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_Support_Reunification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to Support Reunification?</label>
    <type>Checkbox</type>
</CustomField>