force-app/main/default/objects/Case/fields/Witness_List__c.field-meta.xml
<CustomField>
    <fullName>Witness_List__c</fullName>
    <label>Witness List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>