force-app/main/default/objects/Case/listViews/HR_Onboarding_Case.listView-meta.xml
<ListView>
    <fullName>HR_Onboarding_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>HR - Onboarding</label>
</ListView>